--- a/app/src/main/resources/application-dev.properties
+++ b/app/src/main/resources/application-dev.properties
@@ -11,7 +11,7 @@ logging.level.bitcamp.myapp=DEBUG
 #
 # server
 #
-server.port=80
+server.port=8888
 server.servlet.context-path=/
 server.tomcat.max-http-form-post-size=20000000
 #
@@ -30,13 +30,13 @@ mybatis.type-aliases-package=bitcamp.myapp.vo
 #
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
+spring.web.resources.static-locations=file:src/main/resources/static/
 #
 # thymeleaf
-spring.thymeleaf.prefix=classpath:/templates/
 #
+spring.thymeleaf.prefix=file:src/main/resources/templates/
 #
-# for develop
+# for dev
 #
-spring.web.resources.static-locations=classpath:/static/
-#spring.web.resources.cache.period=0
+spring.web.resources.cache.period=0
 #spring.profiles.active=dev
