--- a/app/src/main/resources/application-dev.properties
+++ b/app/src/main/resources/application-dev.properties
@@ -17,9 +17,9 @@ server.tomcat.max-http-form-post-size=20000000
 #
 # database
 #
-spring.datasource.url=jdbc:mysql://db-ld27b-kr.vpc-pub-cdb.ntruss.com/studydb
-spring.datasource.username=study
-spring.datasource.password=Bitcamp!@#123
+#spring.datasource.url=jdbc:mysql://db-ld27b-kr.vpc-pub-cdb.ntruss.com/studydb
+#spring.datasource.username=study
+#spring.datasource.password=Bitcamp!@#123
 #
 # mybatis
 #
