--- a/app/src/main/resources/application-prod.properties
+++ b/app/src/main/resources/application-prod.properties
@@ -17,7 +17,7 @@ server.tomcat.max-http-form-post-size=20000000
 #
 # database
 #
-#spring.datasource.url=jdbc:mysql://172.17.0.2/studydb
+#spring.datasource.url=jdbc:mysql://localhost/studydb
 #spring.datasource.username=study
 #spring.datasource.password=Bitcamp!@#123
 #
