--- a/app/src/main/resources/application-prod.properties
+++ b/app/src/main/resources/application-prod.properties
@@ -3,9 +3,9 @@ spring.application.name=myapp
 # log
 #
 logging.level.root=INFO
-logging.level.org.springframework.web=DEBUG
+#logging.level.org.springframework.web=DEBUG
 #logging.level.org.springframework.security=INFO
-logging.level.bitcamp.myapp=DEBUG
+#logging.level.bitcamp.myapp=DEBUG
 #logging.level.bitcamp.myapp.dao=DEBUG
 #logging.level.bitcamp.myapp.service=DEBUG
 #
@@ -28,8 +28,8 @@ mybatis.type-aliases-package=bitcamp.myapp.vo
 #
 # web
 #
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=100MB
 spring.web.resources.static-locations=classpath:/static/
 #
 # thymeleaf
